option('of_path', type: 'string', value: '../../OpenFOAM-v2306/', description: 'Path to search for OpenFOAM libraries')
option('of_platform', type: 'string', value: 'platforms/linux64GccDPInt32Opt/lib', description: 'Path to search for OpenFOAM libraries')
option('WM_LABEL_SIZE', type : 'combo', choices : ['32', '64'], value : '32', description : 'Size of the Integer Datatypes "label" and "uLabel"')
option('WM_ARCH', type : 'string', value : '"linux64"', description : 'Target Architecture')
option('WM_PRECISION_OPTION', type : 'combo', choices : ['DP', 'SP', 'SPDP'], value : 'DP', description : 'Whether to use double precision, single precision or mixed precision. See IEEE 754')