# SPDX-License-Identifier: Unlicense
# SPDX-FileCopyrightText: 2024 NeoN authors

add_subdirectory(cellCentred/fields)
add_subdirectory(cellCentred/boundary)
add_subdirectory(cellCentred/interpolation)
add_subdirectory(cellCentred/faceNormalGradient)
add_subdirectory(cellCentred/operator)
add_subdirectory(cellCentred/auxiliary)
add_subdirectory(cellCentred/linearAlgebra)
